--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(images/webbg8.png);
     background-size: cover;
-    background-position: center;
+    background-position: right;
 
 }
 .container{
